fix select dropdown on ios.

--- a/hatobito-fan-website/src/style.css
+++ b/hatobito-fan-website/src/style.css
@@ -33,3 +33,8 @@ body {
   padding: 20px;
   text-align: center;
 }
+
+select {
+  -webkit-appearance: menulist;
+  appearance: auto;
+}
